--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="ui-g">
 
   <div class="ui-g-12">
@@ -11,14 +12,33 @@
 
   <div class="ui-g-12">
 
-      <label>Vencimento</label>
-      <input pInputText type="text">
+      <label style="display: block">Vencimento</label>
+      <input pInputText type="text" style="width: 95px">
 
       <label>até</label>
-      <input pInputText type="text">
+      <input pInputText type="text" style="width: 95px">
 
   </div>
 
+  <div class="ui-g-12">
 
+    <button pButton type="submit" label="pesquisar"></button>
+
+  </div>
+
+  <div class="ui-g">
+
+    <div class="ui-g-12">
+
+      <p-table [value]="lancamentos">
+        <p-column field="brand"></p-column>
+      </p-table>
+
+    </div>
+
+
+  </div>
+
+</div>
 
 </div>
