--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: #404c51;
 }
+
 label {
-
     font-weight: bold;
-
 }
 
-
+@media (min-width: 1400px){
+.container {
+    width: 1350px;
+    margin: 0 auto;
+}
+}
