--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,1 @@
-<div class="container">
-<div class="ui-g">
-
-  <div class="ui-g-12">
-    <h1>Lançamento</h1>
-  </div>
-
-  <div class="ui-g-12 ui-fluid">
-    <label>Descrição</label>
-    <input pInputText type="text">
-  </div>
-
-  <div class="ui-g-12">
-
-      <label style="display: block">Vencimento</label>
-      <input pInputText type="text" style="width: 95px">
-
-      <label>até</label>
-      <input pInputText type="text" style="width: 95px">
-
-  </div>
-
-  <div class="ui-g-12">
-
-    <button pButton type="submit" label="pesquisar"></button>
-
-  </div>
-
-  <div class="ui-g">
-
-    <div class="ui-g-12">
-
-      <p-table [value]="lancamentos">
-        <p-column field="brand"></p-column>
-      </p-table>
-
-    </div>
-
-
-  </div>
-
-</div>
-
-</div>
+<app-app-lancamentos-pesquisa></app-app-lancamentos-pesquisa>
