--- a/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -26,21 +26,53 @@
     
       </div>
     
-      <div class="ui-g-12">
+      <div class="ui-g">
     
         <div class="ui-g-12">
     
-          <p-table [value]="lancamentos">
+          <p-table [value]="lancamentos" [responsive]="true"
+          [paginator]="true" [rows]="filtro.itensPorPagina"
+          [lazy]="true" [totalRecords]="totalRegistros"
+          (onLazyLoad)="aoMudarPagina($event)"
+          #tabela>
             <ng-template pTemplate="header">
                 <tr>
-                    <th>brand</th>
-                    <th>lastYearSale</th>
+                    <th>Pessoa</th>
+                    <th>Descricao</th>
+                    <th class="col-data.header">Vencimento</th>
+                    <th class="col-data.header">Pagamaneto</th>
+                    <th class="col-valor.header">Valor</th>
+                    <th class="col-acoes.header"></th>
                 </tr>
             </ng-template>
+
             <ng-template pTemplate="body" let-lancamentos>
                 <tr>
-                    <td>lancamentos</td>
+                    <td>{{lancamentos.pessoa}}</td>
+                    <td>{{lancamentos.descricao}}</td>
+                    <td class="col-data">{{lancamentos.dataVencimento | date: 'dd/MM/yyyy' }}</td>
+                    <td class="col-data">{{lancamentos.dataPagamento | date: 'dd/MM/yyyy' }}</td>
+                    <td class="col-valor" [style.color]="lancamentos.tipo === 'DESPESA' ? 'red' : 'blue'">
+                      {{lancamentos.valor | number: '1.2-2' }}
+                    </td>
+                    <td class="col-acoes">
+                      <button pButton icon="fa-pencil" pTooltip="Editar"
+                      tooltipPosition="top"
+                      [routerLink]="['/lancamentos', lancamentos.codigo]"></button>
+                      <button pButton incon="fa-trash"
+                      pTooltip="Excluir" tooltipPosition="top"
+                      (click)="confirmarExclusao(lancamentos)"
+                      [disabled]="!auth.temPermissao('ROLE_REMOVER_LANCAMENTO')"></button>
+                    </td>
                 </tr>
+            </ng-template>
+
+            <ng-template pTemplate="emptymessage">
+              <tr>
+                <td colspan="6">
+                  Nehum lançamento encontrado
+                </td>
+              </tr>
             </ng-template>
         </p-table>
     
