--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,10 +2,17 @@
 <div class="container">
 <div class="ui-g">
 <div class="ui-g-12">
-    <a href="javascript:;" class="navbar-toggle"><i class="fa fa-bars"></i></a>
+    <a href="javascript:;" class="navbar-toggle" (click)="exibindoMenu = !exibindoMenu"><i class="fa fa-bars"></i></a>
 
 </div>
 </div>
 </div>
+
+<ul class="navbar-menu" [hidden]="!exibindoMenu"> 
+    <li class="navbar-ususario">Lucas Mateus Silva</li>
+    <li class="navbar-menuitem">Lançamentos</li>
+    <li class="navbar-menuitem">Pessoas</li>
+    <li class="navbar-menuitem">Logout</li>
+</ul>
 
 </nav>
