--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,33 @@ label {
     margin: 0 auto;
 }
 }
+
+.col-valor {
+    width: 120px;
+    text-align: right;
+}
+
+.col-valor.header {
+    width: 120px;
+}
+
+.col-data {
+    width: 120px;
+    text-align: center;
+}
+
+.col-data.header {
+    width: 120px;
+}
+
+.col-acoes {
+    width: 90px;
+    text-align: center;
+}
+
+.col-acoes.header {
+    width: 90px;
+}
+
+
+
