--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-app-lancamentos-pesquisa></app-app-lancamentos-pesquisa>
+<app-navbar></app-navbar> 
+
+<app-lancamento-cadastro></app-lancamento-cadastro> 
+
+<!--<app-lancamentos-pesquisa></app-lancamentos-pesquisa> -->
+
+
+<!-- <app-pessoas-pesquisa></app-pessoas-pesquisa>-->
