--- a/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -56,10 +56,8 @@
                       {{lancamentos.valor | number: '1.2-2' }}
                     </td>
                     <td class="col-acoes">
-                      <button pButton icon="fa-pencil" pTooltip="Editar"
-                      tooltipPosition="top"
-                      [routerLink]="['/lancamentos', lancamentos.codigo]"></button>
-                      <button pButton incon="fa-trash"
+                     
+                      <button pButton icon="fa-trash"
                       pTooltip="Excluir" tooltipPosition="top"
                       (click)="confirmarExclusao(lancamentos)"
                       [disabled]="!auth.temPermissao('ROLE_REMOVER_LANCAMENTO')"></button>
