--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -21,7 +21,7 @@
         <div class="ui-g-12">
     
           <p-table [value]="pessoas" [responsive]="true"
-          [paginator]="true" [rows]="filtro.itensPorPagina"
+          [paginator]="true" [rows]="2"
           [lazy]="true" [totalRecords]="totalRegistros"
           (onLazyLoad)="aoMudarPagina($event)"
           #tabela>
@@ -43,10 +43,10 @@
                     <td >{{pessoas.status}}</td>
                     <td class="col-acoes">
                      
-                      <button pButton icon="fa-trash"
-                      pTooltip="Excluir" tooltipPosition="top"
-                      (click)="confirmarExclusao(pessoas)"
-                      [disabled]="!auth.temPermissao('ROLE_REMOVER_PESSOAS')"></button>
+                      <button pButton icon="pi pi-pencil"
+                        pTooltip="Editar" tooltipPosition="top" style="margin-right: 15px;"></button>
+                      <button pButton icon="pi pi-trash"
+                      pTooltip="Excluir" tooltipPosition="top"></button>
                     </td>
                 </tr>
             </ng-template>
@@ -64,7 +64,11 @@
     
     
       </div>
-    
+
+      <div class="ui-g-12">
+          <p-button label="Nova Pessoa" ></p-button>
+      </div>
+
     </div>
     
     </div>
