--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -36,9 +36,9 @@
             <ng-template pTemplate="body" let-pessoas>
                 <tr>
                     <td>{{pessoas.nome}}</td>
-                    <td>{{pessoas.cidade}}</td>
-                    <td >{{pessoas.estado}}</td>
-                    <td >{{pessoas.status}}</td>
+                    <td>{{pessoas.endereco.cidade}}</td>
+                    <td >{{pessoas.endereco.estado}}</td>
+                    <td >{{pessoas.ativo}}</td>
                     <td class="col-acoes">
                      
                       <button pButton icon="pi pi-pencil"
