--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -45,7 +45,7 @@
                 </tr>
             </ng-template>
 
-            <ng-template let-lanc="rowData" pTemplate="body" let-lancamentos>
+            <ng-template  pTemplate="body" let-lancamentos>
                 <tr>
                     <td>{{lancamentos.pessoa.nome}}</td>
                     <td>{{lancamentos.descricao}}</td>
@@ -56,7 +56,7 @@
                     </td>
                     <td class="col-acoes">
                      <button pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top" style="margin-right: 15px;"></button>
-                     <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top" (click)="excluir()"></button>
+                     <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top" (click)="excluir(lancamentos)"></button>
 
                     </td>
                 </tr>
